--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "moment": "^2.29.1",
     "mongoose": "^5.12.14",
-    "nodemon": "^2.0.7",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.7"
   }
 }
