--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/node": "^16.3.2",
     "nodemon": "^2.0.12",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
@@ -25,6 +24,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "ts-node": "^10.1.0"
   }
 }
