--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build": "rm -r ./build && tsc",
     "start": "npm run build && node build/server.js",
     "dev": "nodemon"
   },
