--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "build": "rm -r ./build && tsc",
+    "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/server.js",
     "dev": "nodemon"
   },
@@ -20,7 +20,6 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.2",
     "nodemon": "^2.0.12",
-    "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
   },
   "dependencies": {
@@ -29,6 +28,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.1.0"
   }
 }
