--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.2",
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.12",
+    "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "google-auth-library": "^7.3.0",
     "mongoose": "^5.13.2",
-    "rimraf": "^3.0.2",
     "ts-node": "^10.1.0"
   }
 }
