--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "engines": {
     "node": "16.5.0",
-    "npm": "7.17.0"
+    "npm": "7.18.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.2",
     "dotenv": "^10.0.0",
@@ -28,9 +31,12 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "google-auth-library": "^7.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "ts-node": "^10.1.0"
   }
