--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon"
   },
   "engines": {
-    "node": "16.6.0",
+    "node": "16.6.1",
     "npm": "7.20.3"
   },
   "keywords": [],
@@ -32,8 +32,10 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
+    "entities": "^2.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.3.0",
     "jsonwebtoken": "^8.5.1",
