--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "engines": {
     "node": "16.6.1",
-    "npm": "7.20.4"
+    "npm": "7.20.5"
   },
   "keywords": [],
   "author": "",
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/ioredis": "^4.26.7",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.2",
+    "@types/rate-limit-redis": "^1.7.2",
     "nodemon": "^2.0.12",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
@@ -38,10 +40,12 @@
     "dotenv": "^10.0.0",
     "entities": "^2.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.3.0",
     "google-auth-library": "^7.3.0",
     "ioredis": "^4.27.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
+    "rate-limit-redis": "^2.1.0",
     "ts-node": "^10.1.0"
   }
 }
