--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.2",
     "@types/rate-limit-redis": "^1.7.2",
+    "@types/redis": "^2.8.31",
     "nodemon": "^2.0.12",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
@@ -46,6 +47,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "rate-limit-redis": "^2.1.0",
+    "redis": "^3.1.2",
     "ts-node": "^10.1.0"
   }
 }
