--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express-rate-limit": "^5.1.3",
     "@types/ioredis": "^4.26.7",
     "@types/jsonwebtoken": "^8.5.4",
@@ -38,6 +39,7 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "entities": "^2.2.0",
     "express": "^4.17.1",
