Add contact form

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.3.2",
+    "@types/nodemailer": "^6.4.4",
     "@types/rate-limit-redis": "^1.7.2",
     "@types/redis": "^2.8.31",
     "nodemon": "^2.0.12",
@@ -48,6 +49,7 @@
     "ioredis": "^4.27.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
+    "nodemailer": "^6.6.3",
     "rate-limit-mongo": "^2.3.1",
     "rate-limit-redis": "^2.1.0",
     "redis": "^3.1.2",
