--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.17",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.26.7",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
@@ -39,12 +41,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.10",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "entities": "^2.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "express-session": "^1.17.2",
     "google-auth-library": "^7.3.0",
     "ioredis": "^4.27.7",
     "jsonwebtoken": "^8.5.1",
