--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "college-app",
-  "version": "1.0.0",
+  "name": "acadhere-backend",
+  "version": "1.0",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -21,6 +21,8 @@
     "@types/node": "^17.0.8",
     "@types/nodemailer": "^6.4.4",
     "@types/rate-limit-redis": "^1.7.3",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
@@ -33,12 +35,15 @@
     "dotenv": "^10.0.0",
     "entities": "^3.0.1",
     "express": "^4.17.2",
+    "express-openapi-validator": "^4.13.5",
     "express-rate-limit": "^6.0.4",
     "google-auth-library": "^7.11.0",
     "ioredis": "^4.28.2",
     "mongoose": "^6.1.5",
     "nodemailer": "^6.7.2",
     "rate-limit-redis": "^2.1.0",
-    "ts-node": "^10.4.0"
+    "swagger-ui-express": "^4.3.0",
+    "ts-node": "^10.4.0",
+    "yamljs": "^0.3.0"
   }
 }
