--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
             "*": [
                 "node_modules/*"
             ]
-        }
+        }, 
+        "skipLibCheck": true
     }
 }
