fix: remove pakage version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "acadhere-backend",
-  "version": "1.0",
-  "description": "",
+  "private": true,
   "main": "server.js",
   "scripts": {
     "start": "node dist/server.js",
